Consistency: use ILIKE/NOT ILIKE operator instead of LIKE for PostgreSQL

This fixes the issue "PostgreSQL uses case-sensitive search for LIKE
SQL operator, Kexi's default is case-insensitive"

The approach isn't generic enough for other expressions (the context
of connection could be better) but it's already much better than ignoring
differences between servers

BUG:348203
REVIEW:123952
FIXED-IN:2.9.5